perf(core): prioritize ready ordered commits and trace settlement latency